--- a/src/Nut.MediatR.ServiceLike/Resources/Strings.ja.resx
+++ b/src/Nut.MediatR.ServiceLike/Resources/Strings.ja.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Argument_CanNotEventalize" xml:space="preserve">
+    <value>'{0}' は クローズドジェネリックでINotificationを実装し、AsEventAttributeが設定されていなければなりません。</value>
+  </data>
   <data name="Argument_CanNotNullOrWhitespace" xml:space="preserve">
     <value>'{0}' を null または空白にすることはできません</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="FilterTypeConstratins" xml:space="preserve">
     <value>FilterType は IMediatorServiceFilter を実装し、デフォルトのコンストラクタを持つ必要があります。</value>
+  </data>
+  <data name="MediatorEventNotFound" xml:space="preserve">
+    <value>MediatR イベントが見つかりません。 path: {0}</value>
   </data>
   <data name="MediatorRequestNotFound" xml:space="preserve">
     <value>MediatR リクエストが見つかりません。 path: {0}</value>
