--- a/src/Nut.MediatR.ServiceLike/Resources/Strings.resx
+++ b/src/Nut.MediatR.ServiceLike/Resources/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Argument_CanNotEventalize" xml:space="preserve">
+    <value>{0} argument must be implemented as a closed generic type of INotification with AsEventAttribute.</value>
+  </data>
   <data name="Argument_CanNotNullOrWhitespace" xml:space="preserve">
     <value>{0} cannot be null or empty.</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="FilterTypeConstratins" xml:space="preserve">
     <value>FilterType must implement the IMediatorServiceFilter and have a default constructor.</value>
+  </data>
+  <data name="MediatorEventNotFound" xml:space="preserve">
+    <value>Mediator event was not found. path: {0}</value>
   </data>
   <data name="MediatorRequestNotFound" xml:space="preserve">
     <value>Mediator request was not found. path: {0}</value>
