--- a/src/Nut.MediatR.ServiceLike/Resources/Strings.ja.resx
+++ b/src/Nut.MediatR.ServiceLike/Resources/Strings.ja.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Argument_CanNotEventalize" xml:space="preserve">
-    <value>'{0}' は クローズドジェネリックでINotificationを実装し、AsEventAttributeが設定されていなければなりません。</value>
-  </data>
   <data name="Argument_CanNotNullOrWhitespace" xml:space="preserve">
     <value>'{0}' を null または空白にすることはできません</value>
   </data>
@@ -140,5 +137,8 @@
   </data>
   <data name="Client_RaiseExWhenPublish" xml:space="preserve">
     <value>イベントを発行したときに例外が発生しました。{0}</value>
+  </data>
+  <data name="Argument_CanNotListenerize" xml:space="preserve">
+    <value>'{0}' は クローズドジェネリックでINotificationまたはIRequest&lt;T&gt;を実装し、AsEventListenerAttributeが設定されていなければなりません。</value>
   </data>
 </root>
